--- a/website/index.html
+++ b/website/index.html
@@ -78,12 +78,10 @@
                                 </div>
                                 <div class="one-half ml-md-5 align-self-center">
                                     <h2 class="mb-4">Descubrimiento</h2>
-                                    <p>Nuestros analistas realizaran un relevamiento de las necesidades de tu negocio de forma personalizada, para entender asi, cual es la información que generará valor agregado</p>
-                                    <p>Customer profile</p>
-                                    <p>Somos especialistas en mercados de nicho</p>
-                                    <p>Relevamiento de la necesidad</p>
-                                    <p>Definición de objetivos</p>
-                                    <p>Identificación de ICP</p>
+                                    <p>Con la ayuda de nuestros analistas podrás generar un perfil de cliente (Costumer Profile) que te ayudará a enforcar tus esfuerzos en el público que te dará los mejores resultados.</p>
+                                    <p>Somos especialistas en <b>Mercados de Nicho</b>, donde cada contacto cuenta.</p>
+                                    <p>A partir del relevamiento personalizdo de las necesidades para tu negocio, sabrás cual es la información que generará el mayor <b>valor agregado</b>.</p>
+                                    <p>Con una clara definición de tus objetivos y la identificación del <b>ICP (Ideal Costumer Profile)</b> tendrás todas las herramientas necesarias para una estrategia de venta orientada a resultados.</p>
                                 </div>
                             </div>
                         </div>
@@ -94,9 +92,9 @@
                                 </div>
                                 <div class="one-half order-first mr-md-5 align-self-center">
                                     <h2 class="mb-4">Búsqueda</h2>
-                                    <p>Lead generation</p>
-                                    <p>Búsqueda de datos</p>
-                                    <p>Generación de información con valor agregado</p>
+                                    <p>A partir del ICP (Ideal Costumer Profile), realizamos uno de los procesos de <b>'Lead Generation'</b> más rápido y preciso del mercado.</p>
+                                    <p>Ejecutamos una búsqueda de exhaustiva de aquellos datos que conforman la completitud del perfil necesario para ejecutar una venta satisfactoriamente.</p>
+                                    <p>Gracias a nuestro complejo sistema de generación de información con valor agregado, podrás enfocarte en lo realmente relevante.</p>
                                 </div>
                             </div>
                         </div>
@@ -107,9 +105,9 @@
                                 </div>
                                 <div class="one-half ml-md-5 align-self-center">
                                     <h2 class="mb-4">Actualización</h2>
-                                    <p>Actualización de la información</p>
-                                    <p>Retroalimentación continua</p>
-                                    <p>Sistema de deteccion y alerta ante cambios claves</p>
+                                    <p>Contamos con un sistema de actualización para bases de datos pre-existentes, basado en la retroalimentación continua.</p>
+                                    <p>Disponibilizamos un avanzado sistema de deteccion y alerta de cambios significativos en la información clave para tu negocio.</p>
+                                    <p>Te ayudamos a detectar el momento justo de abordar a tu público objetivo para obtener los mejores resultados.</p>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +150,7 @@
                 <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services d-block text-center">
                         <div class="d-flex justify-content-center">
-                            <div class="icon"><span class="flaticon-guarantee"></span></div>
+                            <div class="icon"><span class="flaticon-patent"></span></div>
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Experiencia</h3>
@@ -163,7 +161,7 @@
                 <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services d-block text-center">
                         <div class="d-flex justify-content-center">
-                            <div class="icon"><span class="flaticon-shield"></span></div>
+                            <div class="icon"><span class="flaticon-check"></span></div>
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Información precisa</h3>
@@ -187,7 +185,7 @@
                 <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services d-block text-center">
                         <div class="d-flex justify-content-center">
-                            <div class="icon"><span class="flaticon-guarantee"></span></div>
+                            <div class="icon"><span class="flaticon-metrics"></span></div>
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Mejora de métricas</h3>
@@ -198,22 +196,22 @@
                 <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services d-block text-center">
                         <div class="d-flex justify-content-center">
-                            <div class="icon"><span class="flaticon-shield"></span></div>
+                            <div class="icon"><span class="flaticon-money-back"></span></div>
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Costo/Beneficio</h3>
-                            <p>Toda la información es generada desde fuentes confiables y a demanda, lo que asegura su veracidad y vigencia.</p>
+                            <p>Generar y mantener actualizada una base de datos suele demandar muchos recursos tanto humanos como económicos, con Cirenio contarás con información precisa y actualizada en todo momento.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services d-block text-center">
                         <div class="d-flex justify-content-center">
-                            <div class="icon"><span class="flaticon-support"></span></div>
+                            <div class="icon"><span class="flaticon-gear"></span></div>
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Flexibilidad</h3>
-                            <p>Integracion con CRM, sistemas de administración de datos o servicios de mailing.</p>
+                            <p>Cirenio esta preparado para la integracion con CRMs, sistemas de administración de datos o servicios de mailing.</p>
                         </div>
                     </div>
                 </div>
@@ -223,14 +221,14 @@
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
-            <div class="row mb-5">
+            <!-- div class="row mb-5">
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
                         <div class="block-23 mb-3">
                             <ul class="list-inline">
                                 <li><span class="icon icon-map-marker"></span><span class="text">Buenos Aires, Argentina</span></li>
-                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+54 9 11 6958-0707</span></a></li>
-                                <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><span class="__cf_email__">hernan@cirenio.com</span></span></a></li>
+                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+54 9 290 60224</span></a></li>
+                                <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><span class="__cf_email__">fernando@cirenio.com</span></span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -243,7 +241,7 @@
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
               </ul>
-            </div>
+          </div -->
 
             <div class="row">
                 <div class="col-md-12 text-center">
