New dashboard background examples

--- a/website/index.html
+++ b/website/index.html
@@ -50,6 +50,39 @@
                     <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="#contact-us" class="btn btn-primary px-4 py-3">Solicita una prueba</a></p>
                 </div>
 
+                <div class="one-half align-self-md-end align-self-sm-center">
+                    <div class="slider-carousel owl-carousel owl-loaded owl-drag">
+                        <div class="owl-stage-outer">
+                            <div class="owl-stage" style="transform: translate3d(-3960px, 0px, 0px); transition: all 0s ease 0s; width: 6930px;">
+                                <div class="owl-item active" style="width: 990px;">
+                                    <div class="item">
+                                        <img src="images/dashboard_full_1.png" class="img-fluid img" alt="">
+                                    </div>
+                                </div>
+                                <div class="owl-item" style="width: 990px;">
+                                    <div class="item">
+                                        <img src="images/dashboard_full_2.png" class="img-fluid img" alt="">
+                                    </div>
+                                </div>
+                                <div class="owl-item" style="width: 990px;">
+                                    <div class="item">
+                                        <img src="images/dashboard_full_3.png" class="img-fluid img" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="owl-nav disabled">
+                            <button role="presentation" class="owl-prev">
+                                <span class="ion-ios-arrow-back"></span>
+                            </button>
+                            <button role="presentation" class="owl-next">
+                                <span class="ion-ios-arrow-forward"></span>
+                            </button>
+                        </div>
+                        <div class="owl-dots disabled"></div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
