--- a/website_beauty/index.html
+++ b/website_beauty/index.html
@@ -51,9 +51,9 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#services" class="nav-link">Servicios</a></li>
-                    <li class="nav-item"><a href="#meetus" class="nav-link">Conocenos</a></li>
-                    <li class="nav-item cta"><a href="#contact-us" class="nav-link"><span>Solicita una prueba</span></a></li>
+                    <li class="nav-item"><a href="#dtp" class="nav-link">Dermotherap Gun</a></li>
+                    <li class="nav-item"><a href="#costumers" class="nav-link">Costumers</a></li>
+                    <li class="nav-item cta"><a href="#contact-us" class="nav-link"><span>Contact Us</span></a></li>
                 </ul>
             </div>
         </div>
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-    <section id="services" class="ftco-section">
+    <section id="dtp" class="ftco-section">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
@@ -245,7 +245,7 @@
         </div>
     </section-->
 
-    <section class="ftco-section testimony-section bg-light">
+    <section id="costumers" class="ftco-section testimony-section bg-light">
           <div class="container">
               <div class="row justify-content-center mb-5 pb-5">
                   <div class="col-md-7 text-center heading-section ftco-animate">
@@ -333,7 +333,7 @@
           </div>
       </section>
 
-      <section class="ftco-section contact-section ftco-degree-bg">
+      <section id="contact-us" class="ftco-section contact-section ftco-degree-bg">
            <div class="container">
                <div class="row justify-content-center mb-5 pb-5">
                    <div class="col-md-7 text-center heading-section ftco-animate">
