Hide costumers say section

--- a/website_beauty/index.html
+++ b/website_beauty/index.html
@@ -245,13 +245,11 @@
         </div>
     </section-->
 
-    <section id="costumers" class="ftco-section testimony-section bg-light">
+    <!--section id="costumers" class="ftco-section testimony-section bg-light">
           <div class="container">
               <div class="row justify-content-center mb-5 pb-5">
                   <div class="col-md-7 text-center heading-section ftco-animate">
-                      <!--span class="subheading">Customer Says</span-->
                       <h2 class="mb-4">Our satisfied customer says</h2>
-                      <!-- p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p -->
                   </div>
               </div>
               <div class="row ftco-animate">
@@ -331,9 +329,9 @@
                   </div>
               </div>
           </div>
-      </section>
+      </section-->
 
-      <section id="contact-us" class="ftco-section contact-section ftco-degree-bg">
+      <section id="contact-us" class="ftco-section contact-section ftco-degree-bg bg-light">
            <div class="container">
                <div class="row justify-content-center mb-5 pb-5">
                    <div class="col-md-7 text-center heading-section ftco-animate">
